crates/vm/tests/snapshots/class_def__empty_class_def_with_super.snap
---
source: crates/vm/tests/class_def.rs
expression: snapshot
---
# Input:
class U: pass
class T(U): pass
print T


# Result (success):
none

# Stdout:
<class def T>

